--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.0.1",
     "@nuxtjs/tailwindcss": "^5.3.1",
     "nuxt": "3.0.0-rc.6"
   },
