--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   "devDependencies": {
     "@nuxt/content": "^2.0.1",
     "@nuxtjs/tailwindcss": "^5.3.1",
-    "nuxt": "3.0.0-rc.6"
+    "nuxt": "3.0.0-rc.6",
+    "@uniformdev/uniform-nuxt": "17.0.0",
+    "@uniformdev/canvas": "17.0.0",
+    "@uniformdev/canvas-vue": "17.0.0",
+    "@uniformdev/cli": "17.0.0",
+    "@uniformdev/context": "17.0.0",
+    "@uniformdev/context-vue": "17.0.0"
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.0",
