--- a/package.json
+++ b/package.json
@@ -8,17 +8,15 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.0.1",
-    "@nuxtjs/tailwindcss": "^5.3.1",
-    "nuxt": "3.0.0-rc.6",
+    "@nuxtjs/tailwindcss": "^5.3.2",
+    "nuxt": "3.0.0-rc.8",
     "@uniformdev/uniform-nuxt": "17.0.0",
     "@uniformdev/canvas": "17.0.0",
     "@uniformdev/canvas-vue": "17.0.0",
     "@uniformdev/cli": "17.0.0",
     "@uniformdev/context": "17.0.0",
-    "@uniformdev/context-vue": "17.0.0"
-  },
-  "dependencies": {
+    "@uniformdev/context-vue": "17.0.0",
     "@tailwindcss/line-clamp": "^0.4.0",
-    "nuxt-schema-org": "^0.7.0-beta.3"
+    "nuxt-schema-org": "1.0.0-beta.11"
   }
 }
