--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,8 @@
         }
       ]
     }
+  ],
+  "redirects": [
+    { "source": "/", "destination": "https://timbenniks.dev/presskit", "permanent": true }
   ]
 }
